# This TOML document specifies the build system for package managers.

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
src_paths = ["python/ectec-gui"]
skip_gitignore = true
line_length = 79
multi_line_output = 0

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true

[tool.mypy]
files = ['src/']
exclude = ['^ui_', '_res.py$']

[tool.pylama]
max_line_length = 79
concurrent = true
linters = "pycodestyle,pydocstyle,pyflakes,pylint,eradicate"

[tool.pylama.linter.pycodestyle]
ignore = "W503,E203,E501"

# [tool.pycodestyle] -> see setup.cfg

[tool.pylama.linter.pydocstyle]
ignore = "D202,D203,D205,D401,D212"

[tool.pydocstyle]
ignore = ["D202", "D203", "D205", "D401", "D212"]

[tool.pylint]
format.max-line-length = 88
main.disable = ["C0301"]            # ignore line-too-long
basic.good-names = ["e", "f", "py"]

[tool.bandit]
exclude_dirs = ['tests']
