# This TOML document specifies the build system for package managers.

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# This document provides the configuration for setuptools.setup()

[project]
name = "ectec"
description = "An educational chat tool for learning how encryption works."
authors = [{ name = "real-yfprojects" }]
maintainers = [{ name = "real-yfprojects" }]
license = { file = "LICENSE" }

keywords = [
    "hashing",
    "chat",
    "education",
    "encryption",
    "networking",
    "authentication",
    "signing",
    "network",
    "hash",
    "educational",
    "sign",
    "certification",
    "chat-application",
    "chatapp",
    "educational-software",
    "gui",
    "pyqt",
    "pyqt5",
    "qt",
    "qt5",
]
classifiers = [
    "Topic :: Education",
    "Topic :: Communications :: Chat",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Natural Language :: German",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 3 - Alpha",
]

requires-python = ">=3.7"
dependencies = ["appdirs", "PyQt5"]

dynamic = ["version", "readme", "optional-dependencies"]

[project.urls]
repository = "https://github.com/real-yfprojects/ectec"

[project.gui-scripts]
ectecgui-client = "ectecgui.client:main"
ectecgui-server = "ectecgui.server:main"

[tool.setuptools.dynamic]
version = { attr = "ectecgui.VERSION" }
readme = { file = ["ECTEC.md", "README.md"], content-type = "text/markdown" }
optional-dependencies = { dev = { file = "requirements-dev.txt" } }

[tool.setuptools.packages.find]
where = ["src"]    # list of folders that contain the packages (["."] by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)


# ---- Linter configuration --------------------------------------------------

[tool.isort]
src_paths = ["python/ectec-gui"]
skip_gitignore = true
line_length = 79
multi_line_output = 0

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true

[tool.mypy]
files = ['src/']
exclude = ['^ui_', '_res.py$']

[tool.pylama]
max_line_length = 79
concurrent = true
linters = "pycodestyle,pydocstyle,pyflakes,pylint,eradicate"

[tool.pylama.linter.pycodestyle]
ignore = "W503,E203,E501"

# [tool.pycodestyle] -> see setup.cfg

[tool.pylama.linter.pydocstyle]
ignore = "D202,D203,D205,D401,D212"

[tool.pydocstyle]
ignore = ["D202", "D203", "D205", "D401", "D212"]

[tool.pylint]
format.max-line-length = 88
main.disable = ["C0301"]            # ignore line-too-long
basic.good-names = ["e", "f", "py"]

[tool.bandit]
exclude_dirs = ['tests']
