# This document provides the configuration for setuptools.setup()

[metadata]
name = ectec
version = attr: ectec.__version__
description = The core module of ectec providing the functionality to the GUI.
long_description = file: README.md, CHANGELOG.md, LICENSE
author = real-yfprojects
maintainer = real-yfprojects
url = https://github.com/real-yfprojects/ectec
license = GNU General Public License v3
license_files = LICENSE
keywords = hashing, chat, education, encryption, networking, authentication
    signing, network, hash, educational, sign, certification, chat-application
    chatapp, educational-software
classifiers =
    Topic :: Education
    Topic :: Communications :: Chat
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Natural Language :: German
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Development Status :: 3 - Alpha

[options]
package_dir=
    =src
packages = find:
# install_requires

[options.packages.find]
where = src
